# ticketr

./: .eslintrc.js  .gitignore  Cargo.toml  package.json  pnpm-lock.yaml  tailwind.config.js
.cargo/: config.toml
src/: style.css
src-prisma/: Cargo.toml
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
src/components/ticket/: Ticket.tsx  TicketList.tsx
src/pages/: index.tsx
